spectec/test/elab/neg/type-forward-tparam-mismatch.t
  $ ./main.exe type-forward-tparam-mismatch.spectec 2>&1
  error: type parameters do not match
    --> type-forward-tparam-mismatch.spectec:5:8
    |
  5 | syntax foo<T> = T
    |        ^^^^
    = source: elab
  [1]
